Fix cartItemPreview button issue on mobile

--- a/src/assets/styles/components/common/_buttons.scss
+++ b/src/assets/styles/components/common/_buttons.scss
@@ -14,7 +14,7 @@ button {
   background-color: #fff;
   color: vars.$text-color-dark;
   white-space: nowrap;
-  min-width: fit-content;
+  min-width: min-content;
   border: 1px solid white;
   box-shadow: inset 0 0 10px 5px rgba(255, 255, 255, 0.03);
   padding: 0.8em 1.2em;
